feat: add drizzle-typebox integration with table singleton pattern
Implements Elysia's recommended drizzle-typebox pattern for auto-generating
validation schemas from Drizzle database schemas. This ensures single source
of truth between database and API validation.

Changes:
- Install drizzle-typebox and pin @sinclair/typebox to 0.34.0
- Add spread/spreads utility functions (src/db/typebox.ts)
- Implement table singleton pattern (src/db/models.ts)
- Export both individual tables and table object from schema
- Update CLAUDE.md files with comprehensive drizzle-typebox guide
- Remove redundant user module (Better Auth handles all user operations)
- Fix email.ts to accept optional type parameter for Better Auth

Benefits:
- Database schema automatically becomes API validation
- No schema duplication (DRY principle)
- End-to-end type safety (DB -> API -> Frontend via Eden Treaty)
- Auto-generated OpenAPI documentation
- Easier maintenance (change DB field, validation updates automatically)

Pattern:
import { db } from '@server/db/models'
const { user } = db.select
export const UserModel = { user }

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "drizzle": "1.4.0",
     "drizzle-kit": "0.31.6",
     "drizzle-orm": "0.44.7",
+    "drizzle-typebox": "^0.3.3",
     "elysia": "latest",
     "elysia-rate-limit": "4.4.2",
     "embla-carousel-react": "^8.6.0",
@@ -98,6 +99,9 @@
     "bun-types": "latest",
     "react-email": "4.3.2",
     "shadcn": "^3.5.0"
+  },
+  "overrides": {
+    "@sinclair/typebox": "0.34.0"
   },
   "module": "src/index.js"
 }
